--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "health-services",
+  "name": "patient-services",
   "version": "1.0.0",
   "description": "This project contains patient appointment scheduling services",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mohammed-ansari/health-services.git"
+    "url": "https://github.com/mohammed-ansari/patient-services.git"
   },
   "author": "Mohammed Ansari",
   "license": "ISC",
